# pyduckling

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE.md  build.rs  build_wheels.sh  pyproject.toml  setup.py
.github/scripts/: build_ffi.sh  build_mac_wheels.sh  build_pyduckling.sh  run_tests.sh
.github/stack/: stack.yaml
.github/workflows/: linux-build.yml  linux-wheels.yml  mac-tests.yml  mac-wheels.yml  rust.yml
duckling/: __init__.py  duckling.pyi
duckling/tests/: test_duckling.py
ext_lib/: README.md
packaging/: 0001-Allow-binaries-larger-than-32MB.patch  build_wheels.py
src/: lib.rs
